# LinuxTune

./: Makefile.am  README.txt  Website.desktop  autogen.sh  build.sh  configure.ac  install.sh
src/: audioHandling.c  main.c
